+--------------------------+
Mon Feb 25 01:59:40 GMT+7 2013
mysql-workbench: Upgraded to 5.2.47

+--------------------------+
Sun Feb 24 11:31:44 GMT+7 2013
calibre: Upgraded to 0.9.20

+--------------------------+
Tue Feb 19 11:59:58 GMT+7 2013
teamviewer: Rebuilt
  Remove dangling symlink properly

+--------------------------+
Tue Feb 19 06:46:36 GMT+7 2013
teamviewer: Rebuilt
  Include Robby Workman's work from SBo

+--------------------------+
Sun Feb 17 17:34:32 GMT+7 2013
insync-kde: Upgraded to 0.9.36

+--------------------------+
Sun Feb 17 09:13:45 GMT+7 2013
calibre: Upgraded to 0.9.19

+--------------------------+
Sat Feb 16 22:08:05 GMT+*7 2013
teamviewer: Rebuilt
  Remove duplicate file

+--------------------------+
Sat Feb 16 09:18:54 GMT+7 2013
teamviewer: Upgraded to 8.0.17147

+--------------------------+
Fri Feb 15 00:41:27 GMT+7 2013
lzlib: Rebuilt
  Add corrent symlink 

+--------------------------+
lzlib: Added
  This is lzlib compression library 1.3

+--------------------------+
Thu Feb 14 01:20:55 GMT+7 2013
google-earth: Added
  This is google earth 7.0.2.8415

+--------------------------+
Mon Feb 11 14:04:45 GMT+7 2013
calibre: Upgraded to 0.9.18

+--------------------------+
Sat Feb  9 09:09:10 GMT+7 2013
ProjectLibre: Upgraded to 1.5.3

+--------------------------+
Sat Feb  9 08:47:54 GMT+7 2013
digikam: Upgraded to 3.0.0

+--------------------------+
Fri Feb  8 21:24:18 GMT+7 2013
sdl: Removed
  This has been applied upstream

+--------------------------+
Fri Feb  8 09:21:44 GMT+7 2013
kvpnc: Rebuilt
  Added upstream patch to fix version comparison bug

+--------------------------+
Thu Feb  7 17:30:49 GMT+7 2013
lxml: Upgraded to 3.0.2

+--------------------------+
Thu Feb  7 16:12:15 GMT+7 2013
connman: Rebuilt 
  Rebuilt against newer iptables in -Current (1.4.17)
mysql-workbench: Upgraded to 5.2.46

+--------------------------+
Tue Feb  5 07:13:56 GMT+7 2013
elementary: Added
  This is one of e17 EFL library needed to build econnman