@@ -1,0 +1,5 @@
+Scratch is a programming language that makes it easy to create your 
+own interactive stories, animations, games, music, and art -- 
+and share your creations on the web. 
+
+This requires squeak-vm
