@@ -1,0 +1,110 @@
+#!/bin/sh
+
+# Slackware build script for scratch
+
+# Copyright 2013 Willy Sudiarto Raharjo <willysr@slackware-id.org>
+# All rights reserved.
+#
+# Redistribution and use of this script, with or without modification, is
+# permitted provided that the following conditions are met:
+#
+# 1. Redistributions of this script must retain the above copyright
+#    notice, this list of conditions and the following disclaimer.
+#
+#  THIS SOFTWARE IS PROVIDED BY THE AUTHOR ``AS IS'' AND ANY EXPRESS OR IMPLIED
+#  WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF
+#  MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED.  IN NO
+#  EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
+#  SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
+#  PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS;
+#  OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
+#  WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR
+#  OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
+#  ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+
+PRGNAM=scratch
+VERSION=${VERSION:-1.4.0.7}
+BUILD=${BUILD:-1wsr}
+
+if [ -z "$ARCH" ]; then
+  case "$( uname -m )" in
+    i?86) ARCH=i486 ;;
+    arm*) ARCH=arm ;;
+       *) ARCH=$( uname -m ) ;;
+  esac
+fi
+
+CWD=$(pwd)
+TMP=${TMP:-/tmp/build}
+PKG=$TMP/package-$PRGNAM
+OUTPUT=${OUTPUT:-/tmp}
+
+if [ "$ARCH" = "i486" ]; then
+  SLKCFLAGS="-O2 -march=i486 -mtune=i686"
+  LIBDIRSUFFIX=""
+elif [ "$ARCH" = "i686" ]; then
+  SLKCFLAGS="-O2 -march=i686 -mtune=i686"
+  LIBDIRSUFFIX=""
+elif [ "$ARCH" = "x86_64" ]; then
+  SLKCFLAGS="-O2 -fPIC"
+  LIBDIRSUFFIX="64"
+else
+  SLKCFLAGS="-O2"
+  LIBDIRSUFFIX=""
+fi
+
+set -e
+
+rm -rf $PKG
+mkdir -p $TMP $PKG $OUTPUT
+cd $TMP
+rm -rf $PRGNAM-$VERSION
+tar xvf $CWD/$PRGNAM-$VERSION.src.tar.gz
+cd $PRGNAM-$VERSION.src
+
+chown -R root:root .
+find . \
+ \( -perm 777 -o -perm 775 -o -perm 711 -o -perm 555 -o -perm 511 \) \
+ -exec chmod 755 {} \; -o \
+ \( -perm 666 -o -perm 664 -o -perm 600 -o -perm 444 -o -perm 440 -o -perm 400 \) \
+ -exec chmod 644 {} \;
+
+make build
+
+mkdir -p $PKG/usr/bin/
+mkdir -p $PKG/usr/lib${LIBDIRSUFFIX}/$PRGNAM
+mkdir -p $PKG/usr/share/applications/
+mkdir -p $PKG/usr/man/man1/
+mkdir -p $PKG/usr/share/mime/packages/
+mkdir -p $PKG/usr/share/icons/hicolor/{128x128,32x32,48x48}/apps
+mkdir -p $PKG/usr/share/$PRGNAM
+
+install -m 0755 src/scratch $PKG/usr/bin/scratch
+install -m 0644 Scratch.image $PKG/usr/lib${LIBDIRSUFFIX}/$PRGNAM/Scratch.image
+install -m 0644 Scratch.ini $PKG/usr/lib${LIBDIRSUFFIX}/$PRGNAM/Scratch.ini
+install -m 0644 src/scratch.desktop $PKG/usr/share/applications/scratch.desktop
+install -m 0644 src/man/scratch.1.gz $PKG/usr/man/man1/scratch.1.gz
+install -m 0644 src/scratch.xml $PKG/usr/share/mime/packages/scratch.xml
+
+
+cp -rf locale Media Projects $PKG/usr/share/$PRGNAM
+cp -rf src/icons/128x128/* $PKG/usr/share/icons/hicolor/128x128/apps
+cp -rf src/icons/32x32/* $PKG/usr/share/icons/hicolor/32x32/apps
+cp -rf src/icons/48x48/* $PKG/usr/share/icons/hicolor/48x48/apps
+chmod -R 0755 $PKG/usr/share/icons/hicolor
+cp -rf Plugins $PKG/usr/lib/${LIBDIRSUFFIX}/$PRGNAM/
+mkdir -p $PKG/usr/doc/$PRGNAM-$VERSION/help
+cp -a \
+  ACKNOWLEDGEMENTS KNOWN-BUGS LICENSE NOTICE README TRADEMARK_POLICY \
+  $PKG/usr/doc/$PRGNAM-$VERSION
+cp -a \
+  Help/en/* \
+  $PKG/usr/doc/$PRGNAM-$VERSION/help
+cat $CWD/$PRGNAM.SlackBuild > $PKG/usr/doc/$PRGNAM-$VERSION/$PRGNAM.SlackBuild
+
+mkdir -p $PKG/install
+cat $CWD/slack-desc > $PKG/install/slack-desc
+cat $CWD/doinst.sh > $PKG/install/doinst.sh
+
+cd $PKG
+/sbin/makepkg -l y -c n $OUTPUT/$PRGNAM-$VERSION-$ARCH-$BUILD.${PKGTYPE:-txz}
