@@ -1,0 +1,8 @@
+PRGNAM="scratch"
+VERSION="1.4.0.7"
+HOMEPAGE="http://scratch.mit.edu/"
+DOWNLOAD="http://download.scratch.mit.edu/scratch-1.4.0.7.src.tar.gz"
+MD5SUM="f948e9e6de3ec9c7c7b4cc2a1975eb5a"
+DOWNLOAD_x86_64=""
+MD5SUM_x86_64=""
+REQUIRES="squeak-vm"
