@@ -1,0 +1,19 @@
+# HOW TO EDIT THIS FILE:
+# The "handy ruler" below makes it easier to edit a package description.
+# Line up the first '|' above the ':' following the base package name, and
+# the '|' on the right side marks the last column you can put a character in.
+# You must make exactly 11 lines for the formatting to be correct.  It's also
+# customary to leave one space after the ':' except on otherwise blank lines.
+
+       |-----handy-ruler------------------------------------------------------|
+scratch: scratch (programming educational tool)
+scratch:
+scratch: Scratch is a programming language that makes it easy to create your 
+scratch: own interactive stories, animations, games, music, and art -- 
+scratch: and share your creations on the web. 
+scratch:
+scratch: Scratch is developed by the Lifelong Kindergarten Group
+scratch:
+scratch: Project Site: http://scratch.mit.edu/
+scratch:
+scratch:
