@@ -1,0 +1,8 @@
+Squeak is a full-featured implementation of the Smalltalk 
+programming language and environment based on the original 
+Smalltalk-80 system.
+
+Squeak has very powerful 2- and 3-D graphics, sound, video, MIDI, 
+animation and other multimedia capabilities.
+
+Optional dependency: speex, pulseAudio
