@@ -1,0 +1,19 @@
+# HOW TO EDIT THIS FILE:
+# The "handy ruler" below makes it easier to edit a package description.
+# Line up the first '|' above the ':' following the base package name, and
+# the '|' on the right side marks the last column you can put a character in.
+# You must make exactly 11 lines for the formatting to be correct.  It's also
+# customary to leave one space after the ':' except on otherwise blank lines.
+
+	 |-----handy-ruler------------------------------------------------------|
+squeak-vm: squeak-vm (squeak virtual machine)
+squeak-vm:
+squeak-vm: Squeak is a full-featured implementation of the Smalltalk 
+squeak-vm: programming language and environment based on the original 
+squeak-vm: Smalltalk-80 system.
+squeak-vm:
+squeak-vm: Squeak has very powerful 2- and 3-D graphics, sound, video, MIDI, 
+squeak-vm: animation and other multimedia capabilities.
+squeak-vm:
+squeak-vm: Project Site: http://squeakvm.org/index.html
+squeak-vm:
