@@ -1,0 +1,8 @@
+PRGNAM="squeak-vm"
+VERSION="4.10.2.2614"
+HOMEPAGE="http://squeakvm.org/"
+DOWNLOAD="http://squeakvm.org/unix/release/Squeak-4.10.2.2614-src.tar.gz"
+MD5SUM="8a5cb1d6899d55df56154fab8716e034"
+DOWNLOAD_x86_64=""
+MD5SUM_x86_64=""
+REQUIRES=""
